<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.marcnuri.yakd</groupId>
  <artifactId>app</artifactId>
  <version>0.0.0</version>
  <name>YAKD :: Application</name>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <container.image.tag>latest</container.image.tag>
    <version.yakc>0.0.26</version.yakc>
    <version.yakc-quarkus-extension>0.0.13</version.yakc-quarkus-extension>
    <version.quarkus>3.1.0.Final</version.quarkus>
<!--    <version.smallrye.reactive>1.9.0</version.smallrye.reactive>-->
    <version.jkube>1.5.1</version.jkube>
    <version.exec-maven-plugin>3.0.0</version.exec-maven-plugin>
    <k8s.namespace>default</k8s.namespace>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${version.quarkus}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-resteasy-reactive</artifactId>
    </dependency>
    <dependency>
      <!-- Take advantage of YAKC Jackson Serializers and Deserializers -->
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-websockets</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-openshift-client</artifactId>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
    </dependency>
    <dependency>
      <groupId>com.marcnuri.yakc</groupId>
      <artifactId>kubernetes-api</artifactId>
      <version>${version.yakc}</version>
    </dependency>
    <dependency>
      <groupId>com.marcnuri.yakc.apis</groupId>
      <artifactId>metrics-server</artifactId>
      <version>${version.yakc}</version>
    </dependency>
    <dependency>
      <groupId>com.marcnuri.yakc.apis</groupId>
      <artifactId>openshift</artifactId>
      <version>${version.yakc}</version>
    </dependency>
    <dependency>
      <groupId>com.marcnuri.yakc</groupId>
      <artifactId>kubernetes-client</artifactId>
      <version>${version.yakc}</version>
    </dependency>
  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
      <resource>
        <directory>src/main/frontend/build</directory>
        <targetPath>frontend</targetPath>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-maven-plugin</artifactId>
        <version>${version.quarkus}</version>
        <executions>
          <execution>
            <goals>
              <goal>build</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>build-frontend</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>${version.exec-maven-plugin}</version>
            <executions>
              <execution>
                <id>npm-install</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <workingDirectory>src/main/frontend</workingDirectory>
                  <executable>npm</executable>
                  <arguments>
                    <argument>install</argument>
                  </arguments>
                </configuration>
              </execution>
              <execution>
                <id>npm-build</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>exec</goal>
                </goals>
                <configuration>
                  <workingDirectory>src/main/frontend</workingDirectory>
                  <executable>npm</executable>
                  <arguments>
                    <argument>run</argument>
                    <argument>build</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>k8s</id>
      <properties>
        <jkube.generator.name>marcnuri/yakc-kubernetes-dashboard:${container.image.tag}</jkube.generator.name>
        <jkube.enricher.jkube-service.type>NodePort</jkube.enricher.jkube-service.type>
        <jkube.enricher.jkube-service.name>yakc-dashboard</jkube.enricher.jkube-service.name>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.eclipse.jkube</groupId>
            <artifactId>kubernetes-maven-plugin</artifactId>
            <version>${version.jkube}</version>
            <executions>
              <execution>
                <id>install</id>
                <phase>install</phase>
                <goals>
                  <goal>build</goal>
                  <goal>resource</goal>
                  <goal>apply</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>native</id>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <properties>
        <quarkus.package.type>native</quarkus.package.type>
        <quarkus.native.additional-build-args>
          -H:ResourceConfigurationFiles=resources-config.json,
          -H:DynamicProxyConfigurationFiles=dynamic-proxy-classes-config.json,
          -J-Djavax.net.ssl.trustStore=${java.home}/lib/security/cacerts,
          -J-Djavax.net.ssl.trustAnchors=${java.home}/lib/security/cacerts,
          -J-Djavax.net.ssl.trustStorePassword=changeit,
        </quarkus.native.additional-build-args>
      </properties>
    </profile>
  </profiles>
</project>
